// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<IconTmLoader /> DOM element add "id" attribute to DOM element 1`] = `
<div>
  <svg
    className="htz-a htz-b htz-c"
    height="1em"
    id="hasId"
    viewBox="0 0 256 256"
    width="1em"
  >
    <style
      dangerouslySetInnerHTML={
        Object {
          "__html": "
        .tm-loader-circle{
          -webkit-transform-origin:center center;
          transform-origin:center center;
          -webkit-animation:tm-loader-animation 1.5s infinite linear;
          animation:tm-loader-animation 1.5s infinite linear
        }
        @-webkit-keyframes tm-loader-animation{
          0%{
            -webkit-transform:rotate(0);
            transform:rotate(0)
          }
          100%{
            -webkit-transform:rotate(-360deg);
            transform:rotate(-360deg)
          }
        }
        @keyframes tm-loader-animation{
          0%{
            -webkit-transform:rotate(0);
            transform:rotate(0)
          }
          100%{
            -webkit-transform:rotate(-360deg);
            transform:rotate(-360deg)
          }
        }
      ",
        }
      }
    />
    <g
      className="tm-loader-circle"
    >
      <linearGradient
        gradientUnits="userSpaceOnUse"
        id="tm-loader-gradiant0.11111"
        x1="55.8"
        x2="189"
        y1="32.1"
        y2="208.9"
      >
        <stop
          offset="0.6"
          stopColor="currentColor"
        />
        <stop
          offset="0.9"
          style={
            Object {
              "stopColor": "currentColor",
              "stopOpacity": 0,
            }
          }
        />
      </linearGradient>
      <path
        d="M128 8C61.7 8 8 61.7 8 128c0 32.6 13.1 62.2 34.2 83.9l0 0c1.8 1.8 4.3 2.9 7.1 2.9 5.5 0 10-4.5 10-10 0-2.9-1.3-5.6-3.3-7.4C38.7 179.4 28 154.9 28 128 28 72.9 72.9 28 128 28c55.1 0 100 44.9 100 100 0 12.6-2.3 24.7-6.6 35.9l19.1 6.2c4.9-13.1 7.6-27.3 7.6-42.1C248 61.7 194.3 8 128 8z"
        fill="url(#tm-loader-gradiant0.11111)"
      />
    </g>
    <path
      d="M189 184h-26v-80l-28 80h-18l-28-80v80H63l0-108h45l18 59 18-59h45V184z"
      fill="currentColor"
    />
  </svg>
</div>
`;

exports[`<IconTmLoader /> DOM element add "id" attribute to DOM element 2`] = `".htz-a{vertical-align:-0.15em}.htz-b{color:inherit}.htz-c{fill:#FFF}"`;

exports[`<IconTmLoader /> DOM element add "onClick" attribute to DOM element 1`] = `
<div>
  <svg
    className="htz-a htz-b htz-c"
    height="1em"
    id={[Function]}
    viewBox="0 0 256 256"
    width="1em"
  >
    <style
      dangerouslySetInnerHTML={
        Object {
          "__html": "
        .tm-loader-circle{
          -webkit-transform-origin:center center;
          transform-origin:center center;
          -webkit-animation:tm-loader-animation 1.5s infinite linear;
          animation:tm-loader-animation 1.5s infinite linear
        }
        @-webkit-keyframes tm-loader-animation{
          0%{
            -webkit-transform:rotate(0);
            transform:rotate(0)
          }
          100%{
            -webkit-transform:rotate(-360deg);
            transform:rotate(-360deg)
          }
        }
        @keyframes tm-loader-animation{
          0%{
            -webkit-transform:rotate(0);
            transform:rotate(0)
          }
          100%{
            -webkit-transform:rotate(-360deg);
            transform:rotate(-360deg)
          }
        }
      ",
        }
      }
    />
    <g
      className="tm-loader-circle"
    >
      <linearGradient
        gradientUnits="userSpaceOnUse"
        id="tm-loader-gradiant0.11111"
        x1="55.8"
        x2="189"
        y1="32.1"
        y2="208.9"
      >
        <stop
          offset="0.6"
          stopColor="currentColor"
        />
        <stop
          offset="0.9"
          style={
            Object {
              "stopColor": "currentColor",
              "stopOpacity": 0,
            }
          }
        />
      </linearGradient>
      <path
        d="M128 8C61.7 8 8 61.7 8 128c0 32.6 13.1 62.2 34.2 83.9l0 0c1.8 1.8 4.3 2.9 7.1 2.9 5.5 0 10-4.5 10-10 0-2.9-1.3-5.6-3.3-7.4C38.7 179.4 28 154.9 28 128 28 72.9 72.9 28 128 28c55.1 0 100 44.9 100 100 0 12.6-2.3 24.7-6.6 35.9l19.1 6.2c4.9-13.1 7.6-27.3 7.6-42.1C248 61.7 194.3 8 128 8z"
        fill="url(#tm-loader-gradiant0.11111)"
      />
    </g>
    <path
      d="M189 184h-26v-80l-28 80h-18l-28-80v80H63l0-108h45l18 59 18-59h45V184z"
      fill="currentColor"
    />
  </svg>
</div>
`;

exports[`<IconTmLoader /> DOM element add "onClick" attribute to DOM element 2`] = `".htz-a{vertical-align:-0.15em}.htz-b{color:inherit}.htz-c{fill:#FFF}"`;

exports[`<IconTmLoader /> DOM element pass attributes defined in the "attrs" prop to the DOM element 1`] = `
<div>
  <svg
    aria-hidden={true}
    className="htz-a htz-b htz-c"
    height="1em"
    viewBox="0 0 256 256"
    width="1em"
  >
    <style
      dangerouslySetInnerHTML={
        Object {
          "__html": "
        .tm-loader-circle{
          -webkit-transform-origin:center center;
          transform-origin:center center;
          -webkit-animation:tm-loader-animation 1.5s infinite linear;
          animation:tm-loader-animation 1.5s infinite linear
        }
        @-webkit-keyframes tm-loader-animation{
          0%{
            -webkit-transform:rotate(0);
            transform:rotate(0)
          }
          100%{
            -webkit-transform:rotate(-360deg);
            transform:rotate(-360deg)
          }
        }
        @keyframes tm-loader-animation{
          0%{
            -webkit-transform:rotate(0);
            transform:rotate(0)
          }
          100%{
            -webkit-transform:rotate(-360deg);
            transform:rotate(-360deg)
          }
        }
      ",
        }
      }
    />
    <g
      className="tm-loader-circle"
    >
      <linearGradient
        gradientUnits="userSpaceOnUse"
        id="tm-loader-gradiant0.11111"
        x1="55.8"
        x2="189"
        y1="32.1"
        y2="208.9"
      >
        <stop
          offset="0.6"
          stopColor="currentColor"
        />
        <stop
          offset="0.9"
          style={
            Object {
              "stopColor": "currentColor",
              "stopOpacity": 0,
            }
          }
        />
      </linearGradient>
      <path
        d="M128 8C61.7 8 8 61.7 8 128c0 32.6 13.1 62.2 34.2 83.9l0 0c1.8 1.8 4.3 2.9 7.1 2.9 5.5 0 10-4.5 10-10 0-2.9-1.3-5.6-3.3-7.4C38.7 179.4 28 154.9 28 128 28 72.9 72.9 28 128 28c55.1 0 100 44.9 100 100 0 12.6-2.3 24.7-6.6 35.9l19.1 6.2c4.9-13.1 7.6-27.3 7.6-42.1C248 61.7 194.3 8 128 8z"
        fill="url(#tm-loader-gradiant0.11111)"
      />
    </g>
    <path
      d="M189 184h-26v-80l-28 80h-18l-28-80v80H63l0-108h45l18 59 18-59h45V184z"
      fill="currentColor"
    />
  </svg>
</div>
`;

exports[`<IconTmLoader /> DOM element pass attributes defined in the "attrs" prop to the DOM element 2`] = `".htz-a{vertical-align:-0.15em}.htz-b{color:inherit}.htz-c{fill:#FFF}"`;

exports[`<IconTmLoader /> DOM element render correctly when no props are passed 1`] = `
<div>
  <svg
    className="htz-a htz-b htz-c"
    height="1em"
    viewBox="0 0 256 256"
    width="1em"
  >
    <style
      dangerouslySetInnerHTML={
        Object {
          "__html": "
        .tm-loader-circle{
          -webkit-transform-origin:center center;
          transform-origin:center center;
          -webkit-animation:tm-loader-animation 1.5s infinite linear;
          animation:tm-loader-animation 1.5s infinite linear
        }
        @-webkit-keyframes tm-loader-animation{
          0%{
            -webkit-transform:rotate(0);
            transform:rotate(0)
          }
          100%{
            -webkit-transform:rotate(-360deg);
            transform:rotate(-360deg)
          }
        }
        @keyframes tm-loader-animation{
          0%{
            -webkit-transform:rotate(0);
            transform:rotate(0)
          }
          100%{
            -webkit-transform:rotate(-360deg);
            transform:rotate(-360deg)
          }
        }
      ",
        }
      }
    />
    <g
      className="tm-loader-circle"
    >
      <linearGradient
        gradientUnits="userSpaceOnUse"
        id="tm-loader-gradiant0.11111"
        x1="55.8"
        x2="189"
        y1="32.1"
        y2="208.9"
      >
        <stop
          offset="0.6"
          stopColor="currentColor"
        />
        <stop
          offset="0.9"
          style={
            Object {
              "stopColor": "currentColor",
              "stopOpacity": 0,
            }
          }
        />
      </linearGradient>
      <path
        d="M128 8C61.7 8 8 61.7 8 128c0 32.6 13.1 62.2 34.2 83.9l0 0c1.8 1.8 4.3 2.9 7.1 2.9 5.5 0 10-4.5 10-10 0-2.9-1.3-5.6-3.3-7.4C38.7 179.4 28 154.9 28 128 28 72.9 72.9 28 128 28c55.1 0 100 44.9 100 100 0 12.6-2.3 24.7-6.6 35.9l19.1 6.2c4.9-13.1 7.6-27.3 7.6-42.1C248 61.7 194.3 8 128 8z"
        fill="url(#tm-loader-gradiant0.11111)"
      />
    </g>
    <path
      d="M189 184h-26v-80l-28 80h-18l-28-80v80H63l0-108h45l18 59 18-59h45V184z"
      fill="currentColor"
    />
  </svg>
</div>
`;

exports[`<IconTmLoader /> DOM element render correctly when no props are passed 2`] = `".htz-a{vertical-align:-0.15em}.htz-b{color:inherit}.htz-c{fill:#FFF}"`;

exports[`<IconTmLoader /> styles responsively set misc styles on an icon 1`] = `
<div>
  <svg
    className="htz-a htz-b htz-c htz-d htz-e"
    height="1em"
    viewBox="0 0 256 256"
    width="1em"
  >
    <style
      dangerouslySetInnerHTML={
        Object {
          "__html": "
        .tm-loader-circle{
          -webkit-transform-origin:center center;
          transform-origin:center center;
          -webkit-animation:tm-loader-animation 1.5s infinite linear;
          animation:tm-loader-animation 1.5s infinite linear
        }
        @-webkit-keyframes tm-loader-animation{
          0%{
            -webkit-transform:rotate(0);
            transform:rotate(0)
          }
          100%{
            -webkit-transform:rotate(-360deg);
            transform:rotate(-360deg)
          }
        }
        @keyframes tm-loader-animation{
          0%{
            -webkit-transform:rotate(0);
            transform:rotate(0)
          }
          100%{
            -webkit-transform:rotate(-360deg);
            transform:rotate(-360deg)
          }
        }
      ",
        }
      }
    />
    <g
      className="tm-loader-circle"
    >
      <linearGradient
        gradientUnits="userSpaceOnUse"
        id="tm-loader-gradiant0.11111"
        x1="55.8"
        x2="189"
        y1="32.1"
        y2="208.9"
      >
        <stop
          offset="0.6"
          stopColor="currentColor"
        />
        <stop
          offset="0.9"
          style={
            Object {
              "stopColor": "currentColor",
              "stopOpacity": 0,
            }
          }
        />
      </linearGradient>
      <path
        d="M128 8C61.7 8 8 61.7 8 128c0 32.6 13.1 62.2 34.2 83.9l0 0c1.8 1.8 4.3 2.9 7.1 2.9 5.5 0 10-4.5 10-10 0-2.9-1.3-5.6-3.3-7.4C38.7 179.4 28 154.9 28 128 28 72.9 72.9 28 128 28c55.1 0 100 44.9 100 100 0 12.6-2.3 24.7-6.6 35.9l19.1 6.2c4.9-13.1 7.6-27.3 7.6-42.1C248 61.7 194.3 8 128 8z"
        fill="url(#tm-loader-gradiant0.11111)"
      />
    </g>
    <path
      d="M189 184h-26v-80l-28 80h-18l-28-80v80H63l0-108h45l18 59 18-59h45V184z"
      fill="currentColor"
    />
  </svg>
</div>
`;

exports[`<IconTmLoader /> styles responsively set misc styles on an icon 2`] = `".htz-a{vertical-align:-0.15em}.htz-b{color:inherit}.htz-c{fill:#FFF}@media (max-width: 79.9375em){.htz-d{position:relative}}@media (min-width: 80em){.htz-e{position:static}}"`;

exports[`<IconTmLoader /> styles set icon's color 1`] = `
<div>
  <svg
    className="htz-a htz-b htz-c"
    height="1em"
    viewBox="0 0 256 256"
    width="1em"
  >
    <style
      dangerouslySetInnerHTML={
        Object {
          "__html": "
        .tm-loader-circle{
          -webkit-transform-origin:center center;
          transform-origin:center center;
          -webkit-animation:tm-loader-animation 1.5s infinite linear;
          animation:tm-loader-animation 1.5s infinite linear
        }
        @-webkit-keyframes tm-loader-animation{
          0%{
            -webkit-transform:rotate(0);
            transform:rotate(0)
          }
          100%{
            -webkit-transform:rotate(-360deg);
            transform:rotate(-360deg)
          }
        }
        @keyframes tm-loader-animation{
          0%{
            -webkit-transform:rotate(0);
            transform:rotate(0)
          }
          100%{
            -webkit-transform:rotate(-360deg);
            transform:rotate(-360deg)
          }
        }
      ",
        }
      }
    />
    <g
      className="tm-loader-circle"
    >
      <linearGradient
        gradientUnits="userSpaceOnUse"
        id="tm-loader-gradiant0.11111"
        x1="55.8"
        x2="189"
        y1="32.1"
        y2="208.9"
      >
        <stop
          offset="0.6"
          stopColor="currentColor"
        />
        <stop
          offset="0.9"
          style={
            Object {
              "stopColor": "currentColor",
              "stopOpacity": 0,
            }
          }
        />
      </linearGradient>
      <path
        d="M128 8C61.7 8 8 61.7 8 128c0 32.6 13.1 62.2 34.2 83.9l0 0c1.8 1.8 4.3 2.9 7.1 2.9 5.5 0 10-4.5 10-10 0-2.9-1.3-5.6-3.3-7.4C38.7 179.4 28 154.9 28 128 28 72.9 72.9 28 128 28c55.1 0 100 44.9 100 100 0 12.6-2.3 24.7-6.6 35.9l19.1 6.2c4.9-13.1 7.6-27.3 7.6-42.1C248 61.7 194.3 8 128 8z"
        fill="url(#tm-loader-gradiant0.11111)"
      />
    </g>
    <path
      d="M189 184h-26v-80l-28 80h-18l-28-80v80H63l0-108h45l18 59 18-59h45V184z"
      fill="currentColor"
    />
  </svg>
</div>
`;

exports[`<IconTmLoader /> styles set icon's color 2`] = `".htz-a{vertical-align:-0.15em}.htz-b{color:#0B7EB5}.htz-c{fill:#FFF}"`;

exports[`<IconTmLoader /> styles set icon's color responsively 1`] = `
<div>
  <svg
    className="htz-a htz-b htz-c htz-d"
    height="1em"
    viewBox="0 0 256 256"
    width="1em"
  >
    <style
      dangerouslySetInnerHTML={
        Object {
          "__html": "
        .tm-loader-circle{
          -webkit-transform-origin:center center;
          transform-origin:center center;
          -webkit-animation:tm-loader-animation 1.5s infinite linear;
          animation:tm-loader-animation 1.5s infinite linear
        }
        @-webkit-keyframes tm-loader-animation{
          0%{
            -webkit-transform:rotate(0);
            transform:rotate(0)
          }
          100%{
            -webkit-transform:rotate(-360deg);
            transform:rotate(-360deg)
          }
        }
        @keyframes tm-loader-animation{
          0%{
            -webkit-transform:rotate(0);
            transform:rotate(0)
          }
          100%{
            -webkit-transform:rotate(-360deg);
            transform:rotate(-360deg)
          }
        }
      ",
        }
      }
    />
    <g
      className="tm-loader-circle"
    >
      <linearGradient
        gradientUnits="userSpaceOnUse"
        id="tm-loader-gradiant0.11111"
        x1="55.8"
        x2="189"
        y1="32.1"
        y2="208.9"
      >
        <stop
          offset="0.6"
          stopColor="currentColor"
        />
        <stop
          offset="0.9"
          style={
            Object {
              "stopColor": "currentColor",
              "stopOpacity": 0,
            }
          }
        />
      </linearGradient>
      <path
        d="M128 8C61.7 8 8 61.7 8 128c0 32.6 13.1 62.2 34.2 83.9l0 0c1.8 1.8 4.3 2.9 7.1 2.9 5.5 0 10-4.5 10-10 0-2.9-1.3-5.6-3.3-7.4C38.7 179.4 28 154.9 28 128 28 72.9 72.9 28 128 28c55.1 0 100 44.9 100 100 0 12.6-2.3 24.7-6.6 35.9l19.1 6.2c4.9-13.1 7.6-27.3 7.6-42.1C248 61.7 194.3 8 128 8z"
        fill="url(#tm-loader-gradiant0.11111)"
      />
    </g>
    <path
      d="M189 184h-26v-80l-28 80h-18l-28-80v80H63l0-108h45l18 59 18-59h45V184z"
      fill="currentColor"
    />
  </svg>
</div>
`;

exports[`<IconTmLoader /> styles set icon's color responsively 2`] = `".htz-a{vertical-align:-0.15em}.htz-d{fill:#FFF}@media (max-width: 79.9375em){.htz-b{color:#0B7EB5}}@media (min-width: 80em){.htz-c{color:#2D2D2D}}"`;

exports[`<IconTmLoader /> styles set icon's fill 1`] = `
<div>
  <svg
    className="htz-a htz-b htz-c"
    height="1em"
    viewBox="0 0 256 256"
    width="1em"
  >
    <style
      dangerouslySetInnerHTML={
        Object {
          "__html": "
        .tm-loader-circle{
          -webkit-transform-origin:center center;
          transform-origin:center center;
          -webkit-animation:tm-loader-animation 1.5s infinite linear;
          animation:tm-loader-animation 1.5s infinite linear
        }
        @-webkit-keyframes tm-loader-animation{
          0%{
            -webkit-transform:rotate(0);
            transform:rotate(0)
          }
          100%{
            -webkit-transform:rotate(-360deg);
            transform:rotate(-360deg)
          }
        }
        @keyframes tm-loader-animation{
          0%{
            -webkit-transform:rotate(0);
            transform:rotate(0)
          }
          100%{
            -webkit-transform:rotate(-360deg);
            transform:rotate(-360deg)
          }
        }
      ",
        }
      }
    />
    <g
      className="tm-loader-circle"
    >
      <linearGradient
        gradientUnits="userSpaceOnUse"
        id="tm-loader-gradiant0.11111"
        x1="55.8"
        x2="189"
        y1="32.1"
        y2="208.9"
      >
        <stop
          offset="0.6"
          stopColor="currentColor"
        />
        <stop
          offset="0.9"
          style={
            Object {
              "stopColor": "currentColor",
              "stopOpacity": 0,
            }
          }
        />
      </linearGradient>
      <path
        d="M128 8C61.7 8 8 61.7 8 128c0 32.6 13.1 62.2 34.2 83.9l0 0c1.8 1.8 4.3 2.9 7.1 2.9 5.5 0 10-4.5 10-10 0-2.9-1.3-5.6-3.3-7.4C38.7 179.4 28 154.9 28 128 28 72.9 72.9 28 128 28c55.1 0 100 44.9 100 100 0 12.6-2.3 24.7-6.6 35.9l19.1 6.2c4.9-13.1 7.6-27.3 7.6-42.1C248 61.7 194.3 8 128 8z"
        fill="url(#tm-loader-gradiant0.11111)"
      />
    </g>
    <path
      d="M189 184h-26v-80l-28 80h-18l-28-80v80H63l0-108h45l18 59 18-59h45V184z"
      fill="currentColor"
    />
  </svg>
</div>
`;

exports[`<IconTmLoader /> styles set icon's fill 2`] = `".htz-a{vertical-align:-0.15em}.htz-b{color:inherit}.htz-c{fill:#0B7EB5}"`;

exports[`<IconTmLoader /> styles set icon's fill responsively 1`] = `
<div>
  <svg
    className="htz-a htz-b htz-c htz-d"
    height="1em"
    viewBox="0 0 256 256"
    width="1em"
  >
    <style
      dangerouslySetInnerHTML={
        Object {
          "__html": "
        .tm-loader-circle{
          -webkit-transform-origin:center center;
          transform-origin:center center;
          -webkit-animation:tm-loader-animation 1.5s infinite linear;
          animation:tm-loader-animation 1.5s infinite linear
        }
        @-webkit-keyframes tm-loader-animation{
          0%{
            -webkit-transform:rotate(0);
            transform:rotate(0)
          }
          100%{
            -webkit-transform:rotate(-360deg);
            transform:rotate(-360deg)
          }
        }
        @keyframes tm-loader-animation{
          0%{
            -webkit-transform:rotate(0);
            transform:rotate(0)
          }
          100%{
            -webkit-transform:rotate(-360deg);
            transform:rotate(-360deg)
          }
        }
      ",
        }
      }
    />
    <g
      className="tm-loader-circle"
    >
      <linearGradient
        gradientUnits="userSpaceOnUse"
        id="tm-loader-gradiant0.11111"
        x1="55.8"
        x2="189"
        y1="32.1"
        y2="208.9"
      >
        <stop
          offset="0.6"
          stopColor="currentColor"
        />
        <stop
          offset="0.9"
          style={
            Object {
              "stopColor": "currentColor",
              "stopOpacity": 0,
            }
          }
        />
      </linearGradient>
      <path
        d="M128 8C61.7 8 8 61.7 8 128c0 32.6 13.1 62.2 34.2 83.9l0 0c1.8 1.8 4.3 2.9 7.1 2.9 5.5 0 10-4.5 10-10 0-2.9-1.3-5.6-3.3-7.4C38.7 179.4 28 154.9 28 128 28 72.9 72.9 28 128 28c55.1 0 100 44.9 100 100 0 12.6-2.3 24.7-6.6 35.9l19.1 6.2c4.9-13.1 7.6-27.3 7.6-42.1C248 61.7 194.3 8 128 8z"
        fill="url(#tm-loader-gradiant0.11111)"
      />
    </g>
    <path
      d="M189 184h-26v-80l-28 80h-18l-28-80v80H63l0-108h45l18 59 18-59h45V184z"
      fill="currentColor"
    />
  </svg>
</div>
`;

exports[`<IconTmLoader /> styles set icon's fill responsively 2`] = `".htz-a{vertical-align:-0.15em}.htz-b{color:inherit}@media (max-width: 79.9375em){.htz-c{fill:#0B7EB5}}@media (min-width: 80em){.htz-d{fill:#2D2D2D}}"`;

exports[`<IconTmLoader /> styles set icon's size 1`] = `
<div>
  <svg
    className="htz-a htz-b htz-c htz-d"
    height="1em"
    viewBox="0 0 256 256"
    width="1em"
  >
    <style
      dangerouslySetInnerHTML={
        Object {
          "__html": "
        .tm-loader-circle{
          -webkit-transform-origin:center center;
          transform-origin:center center;
          -webkit-animation:tm-loader-animation 1.5s infinite linear;
          animation:tm-loader-animation 1.5s infinite linear
        }
        @-webkit-keyframes tm-loader-animation{
          0%{
            -webkit-transform:rotate(0);
            transform:rotate(0)
          }
          100%{
            -webkit-transform:rotate(-360deg);
            transform:rotate(-360deg)
          }
        }
        @keyframes tm-loader-animation{
          0%{
            -webkit-transform:rotate(0);
            transform:rotate(0)
          }
          100%{
            -webkit-transform:rotate(-360deg);
            transform:rotate(-360deg)
          }
        }
      ",
        }
      }
    />
    <g
      className="tm-loader-circle"
    >
      <linearGradient
        gradientUnits="userSpaceOnUse"
        id="tm-loader-gradiant0.11111"
        x1="55.8"
        x2="189"
        y1="32.1"
        y2="208.9"
      >
        <stop
          offset="0.6"
          stopColor="currentColor"
        />
        <stop
          offset="0.9"
          style={
            Object {
              "stopColor": "currentColor",
              "stopOpacity": 0,
            }
          }
        />
      </linearGradient>
      <path
        d="M128 8C61.7 8 8 61.7 8 128c0 32.6 13.1 62.2 34.2 83.9l0 0c1.8 1.8 4.3 2.9 7.1 2.9 5.5 0 10-4.5 10-10 0-2.9-1.3-5.6-3.3-7.4C38.7 179.4 28 154.9 28 128 28 72.9 72.9 28 128 28c55.1 0 100 44.9 100 100 0 12.6-2.3 24.7-6.6 35.9l19.1 6.2c4.9-13.1 7.6-27.3 7.6-42.1C248 61.7 194.3 8 128 8z"
        fill="url(#tm-loader-gradiant0.11111)"
      />
    </g>
    <path
      d="M189 184h-26v-80l-28 80h-18l-28-80v80H63l0-108h45l18 59 18-59h45V184z"
      fill="currentColor"
    />
  </svg>
</div>
`;

exports[`<IconTmLoader /> styles set icon's size 2`] = `".htz-a{vertical-align:-0.15em}.htz-b{color:inherit}.htz-c{fill:#FFF}.htz-d{font-size:6rem}"`;

exports[`<IconTmLoader /> styles set icon's size responsively 1`] = `
<div>
  <svg
    className="htz-a htz-b htz-c htz-d htz-e"
    height="1em"
    viewBox="0 0 256 256"
    width="1em"
  >
    <style
      dangerouslySetInnerHTML={
        Object {
          "__html": "
        .tm-loader-circle{
          -webkit-transform-origin:center center;
          transform-origin:center center;
          -webkit-animation:tm-loader-animation 1.5s infinite linear;
          animation:tm-loader-animation 1.5s infinite linear
        }
        @-webkit-keyframes tm-loader-animation{
          0%{
            -webkit-transform:rotate(0);
            transform:rotate(0)
          }
          100%{
            -webkit-transform:rotate(-360deg);
            transform:rotate(-360deg)
          }
        }
        @keyframes tm-loader-animation{
          0%{
            -webkit-transform:rotate(0);
            transform:rotate(0)
          }
          100%{
            -webkit-transform:rotate(-360deg);
            transform:rotate(-360deg)
          }
        }
      ",
        }
      }
    />
    <g
      className="tm-loader-circle"
    >
      <linearGradient
        gradientUnits="userSpaceOnUse"
        id="tm-loader-gradiant0.11111"
        x1="55.8"
        x2="189"
        y1="32.1"
        y2="208.9"
      >
        <stop
          offset="0.6"
          stopColor="currentColor"
        />
        <stop
          offset="0.9"
          style={
            Object {
              "stopColor": "currentColor",
              "stopOpacity": 0,
            }
          }
        />
      </linearGradient>
      <path
        d="M128 8C61.7 8 8 61.7 8 128c0 32.6 13.1 62.2 34.2 83.9l0 0c1.8 1.8 4.3 2.9 7.1 2.9 5.5 0 10-4.5 10-10 0-2.9-1.3-5.6-3.3-7.4C38.7 179.4 28 154.9 28 128 28 72.9 72.9 28 128 28c55.1 0 100 44.9 100 100 0 12.6-2.3 24.7-6.6 35.9l19.1 6.2c4.9-13.1 7.6-27.3 7.6-42.1C248 61.7 194.3 8 128 8z"
        fill="url(#tm-loader-gradiant0.11111)"
      />
    </g>
    <path
      d="M189 184h-26v-80l-28 80h-18l-28-80v80H63l0-108h45l18 59 18-59h45V184z"
      fill="currentColor"
    />
  </svg>
</div>
`;

exports[`<IconTmLoader /> styles set icon's size responsively 2`] = `".htz-a{vertical-align:-0.15em}.htz-b{color:inherit}.htz-c{fill:#FFF}@media (max-width: 79.9375em){.htz-d{font-size:6rem}}@media (min-width: 80em){.htz-e{font-size:7rem}}"`;

exports[`<IconTmLoader /> styles set misc styles on an icon 1`] = `
<div>
  <svg
    className="htz-a htz-b htz-c htz-d"
    height="1em"
    viewBox="0 0 256 256"
    width="1em"
  >
    <style
      dangerouslySetInnerHTML={
        Object {
          "__html": "
        .tm-loader-circle{
          -webkit-transform-origin:center center;
          transform-origin:center center;
          -webkit-animation:tm-loader-animation 1.5s infinite linear;
          animation:tm-loader-animation 1.5s infinite linear
        }
        @-webkit-keyframes tm-loader-animation{
          0%{
            -webkit-transform:rotate(0);
            transform:rotate(0)
          }
          100%{
            -webkit-transform:rotate(-360deg);
            transform:rotate(-360deg)
          }
        }
        @keyframes tm-loader-animation{
          0%{
            -webkit-transform:rotate(0);
            transform:rotate(0)
          }
          100%{
            -webkit-transform:rotate(-360deg);
            transform:rotate(-360deg)
          }
        }
      ",
        }
      }
    />
    <g
      className="tm-loader-circle"
    >
      <linearGradient
        gradientUnits="userSpaceOnUse"
        id="tm-loader-gradiant0.11111"
        x1="55.8"
        x2="189"
        y1="32.1"
        y2="208.9"
      >
        <stop
          offset="0.6"
          stopColor="currentColor"
        />
        <stop
          offset="0.9"
          style={
            Object {
              "stopColor": "currentColor",
              "stopOpacity": 0,
            }
          }
        />
      </linearGradient>
      <path
        d="M128 8C61.7 8 8 61.7 8 128c0 32.6 13.1 62.2 34.2 83.9l0 0c1.8 1.8 4.3 2.9 7.1 2.9 5.5 0 10-4.5 10-10 0-2.9-1.3-5.6-3.3-7.4C38.7 179.4 28 154.9 28 128 28 72.9 72.9 28 128 28c55.1 0 100 44.9 100 100 0 12.6-2.3 24.7-6.6 35.9l19.1 6.2c4.9-13.1 7.6-27.3 7.6-42.1C248 61.7 194.3 8 128 8z"
        fill="url(#tm-loader-gradiant0.11111)"
      />
    </g>
    <path
      d="M189 184h-26v-80l-28 80h-18l-28-80v80H63l0-108h45l18 59 18-59h45V184z"
      fill="currentColor"
    />
  </svg>
</div>
`;

exports[`<IconTmLoader /> styles set misc styles on an icon 2`] = `".htz-a{vertical-align:-0.15em}.htz-b{color:inherit}.htz-c{fill:#FFF}.htz-d{position:relative}"`;
